hero image added

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <header>
         <div class="hero">
             <div id="particles-js">
-            <h1 class="text-center white-text intro">Creating beautiful brands</h1>
+            <h1 class="text-center white-text intro">creating beautiful brands</h1>
             </div>
         </div>
         </header>
