--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css"/>
+    <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Biryani" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
 
@@ -21,41 +21,30 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <section>
-        <nav id="mainNav" class="navbar navbar-logo navbar-fixed-top affix-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                    <a class="navbar-brand page-scroll" href="index.html"></a>
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a class="text-white" href="index.html">Home</a>
-                        </li>
-                        <li>
-                            <a href="about.html">About</a>
-                        </li>
-                        <li>
-                            <a href="#">Work</a>
-                        </li>
-                        <li>
-                            <a href="blog.html">Blog</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-logo">
+            <div class="">
+                <ul class="">
+                    <li>
+                        <a class="text-white" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Work</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Blog</a>
+                    </li>
+                </ul>
             </div>
         </nav>
         <header>
-        <div class="hero">
-            <div id="particles-js">
-            <h1 class="text-center white-text intro">creating beautiful brands</h1>
+            <div class="hero">
+                <div id="particles-js">
+                    <h1 class="text-center white-text intro">creating beautiful brands</h1>
+                </div>
             </div>
-        </div>
         </header>
     </section>
 
