fixed hero height to 80vh and added text block with initial styling

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <section>
+    <section class="hero-height">
         <nav class="navbar navbar-logo">
             <ul>
                 <li>
@@ -40,13 +40,19 @@
                 <img src="img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
             </div>
         </nav>
-        <header>
             <div class="hero">
                 <div id="particles-js">
                     <h1 class="text-center white-text intro">creating beautiful brands</h1>
                 </div>
             </div>
-        </header>
+    </section>
+    
+    <section>
+        <div class="container text-center">
+            <h3>ackee is the portfolio of Ed Stennett</h3>
+            <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+            <hr>
+        </div>
     </section>
 
     <!-- scripts -->
