project images added, skeleton grid added to ITCSS files accordingly, styling to h2 and p tags

--- a/src/index.html
+++ b/src/index.html
@@ -40,18 +40,39 @@
                 <img src="img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
             </div>
         </nav>
-            <div class="hero">
-                <div id="particles-js">
-                    <h1 class="text-center white-text intro">creating beautiful brands</h1>
-                </div>
+        <div class="hero">
+            <div id="particles-js">
+                <h1 class="text-center white-text intro">creating beautiful brands</h1>
             </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container central-text-intro">
+            <div class="twelve columns">
+                <h3>ackee is the portfolio of Ed Stennett</h3>
+                <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
+                <hr>
+            </div>
+        </div>
     </section>
     
     <section>
-        <div class="container text-center">
-            <h3>ackee is the portfolio of Ed Stennett</h3>
-            <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
-            <hr>
+        <div class="contrainer">
+            <div class="six columns">
+                <img src="img/uwork-hero.png" alt="uwork logo on green background">
+            </div>
+            <div class="six columns">
+                <img src="img/ackee-hero.png" alt="ackee logo on dark background">
+            </div>
+        </div>
+        <div class="contrainer">
+            <div class="six columns">
+                <img src="img/jf-hero.png" alt="dark image from James Falconer's site with a lightbulb">
+            </div>
+            <div class="six columns">
+                <img src="img/cgm-hero.png" alt="young couple smiling from cgm site">
+            </div>
         </div>
     </section>
 
