image-responsive added to 05-object.scss to make things responsive. Should probably get back to work now.

--- a/src/index.html
+++ b/src/index.html
@@ -60,18 +60,18 @@
     <section>
         <div class="contrainer">
             <div class="six columns">
-                <img src="img/uwork-hero.png" alt="uwork logo on green background">
+                <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
             </div>
             <div class="six columns">
-                <img src="img/ackee-hero.png" alt="ackee logo on dark background">
+                <img src="img/ackee-hero.png" class="img-responsive" alt="ackee logo on dark background">
             </div>
         </div>
         <div class="contrainer">
             <div class="six columns">
-                <img src="img/jf-hero.png" alt="dark image from James Falconer's site with a lightbulb">
+                <img src="img/jf-hero.png" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
             </div>
             <div class="six columns">
-                <img src="img/cgm-hero.png" alt="young couple smiling from cgm site">
+                <img src="img/cgm-hero.png" class="img-responsive" alt="young couple smiling from cgm site">
             </div>
         </div>
     </section>
