About page added with video

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-logo">
             <ul>
                 <li>
-                    <a class="text-white" href="index.html">Home</a>
+                    <a class="text-white" href="index.html"><u>Home</u></a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -61,7 +61,7 @@
         <div class="six-no-padding columns image-blur">
             <a href="#">
                 <span class="caption"> <h3>uWork</h3>
-                    <hr>
+                    <hr class="hr-full-width">
                     <p>Design   |   Branding</p></span>
                 <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
             </a>
@@ -69,7 +69,7 @@
         <div class="six-no-padding columns image-blur">
             <a href="#">
                 <span class="caption"> <h3>uWork</h3>
-                    <hr>
+                    <hr class="hr-full-width">
                     <p>Design   |   Branding</p></span>
                 <img src="img/ackee-hero.png" class="img-responsive" alt="ackee logo on dark background">
             </a>
@@ -77,7 +77,7 @@
         <div class="six-no-padding columns image-blur">
             <a href="#">
                 <span class="caption"> <h3>uWork</h3>
-                    <hr>
+                    <hr class="hr-full-width">
                     <p>Design   |   Branding</p></span>
                 <img src="img/jf-hero.png" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
             </a>
@@ -96,8 +96,7 @@
             </filter>
         </svg>
     </section>
-
-
+    
     <section>
         <div class="container text-block">
             <div class="six columns left-text-intro">
@@ -105,7 +104,7 @@
                 <p>Ed Stennett is currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. He is responsible for the technical and creative output of the company, providing creative direction, presenting creative concepts and rationalé to key clients on a glabal scale.</p>
             </div>
             <div class="six columns right-text-intro">
-                <h3>skills</h3>
+                <h3 class="invisible">skills</h3>
                 <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
