--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
         <div class="six-no-padding columns image-blur">
             <a href="#">
                 <span class="caption"> <h3>uWork</h3>
-                    <hr>
+                    <hr class="hr-full-width">
                     <p>Design   |   Branding</p></span>
                 <img src="img/cgm-hero.png" class="img-responsive" alt="young couple smiling from cgm site">
             </a>
