work.html added

--- a/src/about.html
+++ b/src/about.html
@@ -30,7 +30,7 @@
                     <a href="about.html"><u>About</u></a>
                 </li>
                 <li>
-                    <a href="#">Work</a>
+                    <a href="work.html">Work</a>
                 </li>
                 <li>
                     <a href="blog.html">Blog</a>
