--- a/src/work.html
+++ b/src/work.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>ackee creative | freelancer Winchester</title>
+    <title>ackee creative | work</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -24,13 +24,13 @@
         <nav class="navbar navbar-logo">
             <ul>
                 <li>
-                    <a class="text-white" href="index.html"><u>Home</u></a>
+                    <a class="text-white" href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="work.html">Work</a>
+                    <a href="work.html"><u>Work</u></a>
                 </li>
                 <li>
                     <a href="blog.html">Blog</a>
@@ -41,23 +41,14 @@
             </div>
         </nav>
         <div class="hero">
-            <div id="particles-js">
-                <h1 class="text-center white-text intro">creating beautiful brands</h1>
+            <div class="about-hero">
+                <span class="text-center white-text intro"><img src="img/white_ackee_icon.svg" style="width: 20em;" alt="white ackee icon"></span>
             </div>
         </div>
     </section>
 
     <section>
-        <div class="central-text-intro container">
-            <div class="twelve columns">
-                <h3>ackee is the portfolio of Ed Stennett</h3>
-                <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
-                <hr class="divider">
-            </div>
-        </div>
-    </section>
-
-    <section>
+        <div class="container">
         <div class="six-no-padding columns image-blur">
             <a href="#">
                 <span class="caption"> <h3>uWork</h3>
@@ -95,22 +86,12 @@
                 <feGaussianBlur stdDeviation="3"/>
             </filter>
         </svg>
-    </section>
-    
-    <section>
-        <div class="container text-block">
-            <div class="six columns left-text-intro">
-                <h3>services</h3>
-                <p>Ed Stennett is currently the Technical Director at ACHiiVE, an innovative agency in Winchester, Hampshire. He is responsible for the technical and creative output of the company, providing creative direction, presenting creative concepts and rationalé to key clients on a glabal scale.</p>
             </div>
-            <div class="six columns right-text-intro">
-                <h3 class="invisible">skills</h3>
-                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
-            </div>
-        </div>
     </section>
 
-     <section class="contact-form">
+
+
+    <section class="contact-form">
         <div class="twelve columns contact-hero ">
         </div>
         <div class="container">
@@ -118,7 +99,7 @@
             <h3 class="contact-heading">want to make<br> something beautiful?</h3>
 
 
-            <form method="POST" action="http://formspree.io/ed@uwork.co.uk">
+            <form method="POST" action="http://formspree.io/edward.stennett@ackeecreative.com">
 
                 <div class="group">
                     <input type="text" name="name" required>
@@ -153,16 +134,17 @@
         </div>
 
     </section>
-        <footer class="global-footer">
-            <div class="container fooer">
-                <div class="one column footer-text">
-                    <img class="footer-icon" src="img/white_ackee_icon.svg" alt="ackee icon">
-                </div>
-                <div class="eleven columns">
-                    <p>Copyright 2017 ackee creative<br> Website designed and handcoded by Ed Stennett</p>
-                </div>
+
+    <footer class="global-footer">
+        <div class="container fooer">
+            <div class="one column footer-text">
+                <img class="footer-icon" src="img/white_ackee_icon.svg" alt="ackee icon">
             </div>
-        </footer>
+            <div class="eleven columns">
+                <p>Copyright 2017 ackee creative<br> Website designed and handcoded by Ed Stennett</p>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- scripts -->
@@ -195,6 +177,28 @@
     <script>
         $('.menu-handle').on('click', function() {
             $('nav ul').toggleClass('menu-visible');
+        });
+    </script>
+
+    <script>
+        function playVideo(el) {
+            var videoId = el.data('video');
+            var video = document.getElementById(videoId);
+
+            if (video.paused) {
+                // Play the video
+                video.play();
+                el.removeClass('paused').addClass('playing');
+            } else {
+                // Pause the video
+                video.pause();
+                el.removeClass('playing').addClass('paused');
+            }
+        }
+
+        $(document).on('click', '.js-video-control', function(e) {
+            playVideo($(this));
+            e.preventDefault();
         });
     </script>
 </body>
