--- a/src/about.html
+++ b/src/about.html
@@ -142,12 +142,12 @@
     </section>
 
     <footer class="global-footer">
-        <div class="container fooer">
-            <div class="one column footer-text">
+        <div class="container">
+            <div class="one column footer-padding">
                 <img class="footer-icon" src="img/white_ackee_icon.svg" alt="ackee icon">
             </div>
             <div class="eleven columns">
-                <p>Copyright 2017 ackee creative<br> Website designed and handcoded by Ed Stennett</p>
+                <p class="footer-text">Copyright 2017 ackee creative<br> Website designed and handcoded by Ed Stennett</p>
             </div>
         </div>
     </footer>
