--- a/src/index.html
+++ b/src/index.html
@@ -153,16 +153,16 @@
         </div>
 
     </section>
-        <footer class="global-footer">
-            <div class="container fooer">
-                <div class="one column footer-text">
-                    <img class="footer-icon" src="img/white_ackee_icon.svg" alt="ackee icon">
-                </div>
-                <div class="eleven columns">
-                    <p>Copyright 2017 ackee creative<br> Website designed and handcoded by Ed Stennett</p>
-                </div>
+    <footer class="global-footer">
+        <div class="container">
+            <div class="one column footer-padding">
+                <img class="footer-icon" src="img/white_ackee_icon.svg" alt="ackee icon">
             </div>
-        </footer>
+            <div class="eleven columns">
+                <p class="footer-text">Copyright 2017 ackee creative<br> Website designed and handcoded by Ed Stennett</p>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- scripts -->
