Gallery placeholder images added

--- a/src/work.html
+++ b/src/work.html
@@ -45,15 +45,15 @@
             <div id="item-2" class="control-operator"></div>
             <div id="item-3" class="control-operator"></div>
 
-            <figure class="item work-item-1">
+            <figure class="item image-one">
                 <!--<img class="img-responsive" src="img/dark-image-hero.jpg">-->
             </figure>
 
-            <figure class="item work-item-2">
+            <figure class="item image-two">
 <!--                <img class="img-responsive" src="img/ackee-hero.png">-->
             </figure>
 
-            <figure class="item work-item-1">
+            <figure class="item image-three">
 <!--                <img class="img-responsive" src="img/cgm-hero.png">-->
             </figure>
 
