Temporary particles-js fix added to all pages

--- a/src/about.html
+++ b/src/about.html
@@ -140,6 +140,8 @@
         </div>
 
     </section>
+    
+    <div class="hidden" id="particles-js"></div>
 
     <footer class="global-footer">
         <div class="container">
