--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
         <div class="hero">
-            <div id="particles-js">
+            <div id="particles-js" class="homepage-hero">
                 <h1 class="text-center white-text intro">creating beautiful brands</h1>
             </div>
         </div>
