--- a/src/work.html
+++ b/src/work.html
@@ -40,27 +40,33 @@
                 <img src="img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
             </div>
         </nav>
-        <div class="gallery hero autoplay items-3">
+        <div class="gallery hero autoplay items-4">
             <div id="item-1" class="control-operator"></div>
             <div id="item-2" class="control-operator"></div>
             <div id="item-3" class="control-operator"></div>
+            <div id="item-4" class="control-operator"></div>
 
             <figure class="item image-one">
-                <!--<img class="img-responsive" src="img/dark-image-hero.jpg">-->
+                <h1 class="text-center white-text intro">CGM Solicitors</h1>
             </figure>
 
             <figure class="item image-two">
-<!--                <img class="img-responsive" src="img/ackee-hero.png">-->
+                <h1 class="text-center white-text intro">uWork</h1>
             </figure>
 
             <figure class="item image-three">
-<!--                <img class="img-responsive" src="img/cgm-hero.png">-->
+                <h1 class="text-center white-text intro">James Falconer</h1>
+            </figure>
+            
+            <figure class="item image-four">
+                <h1 class="text-center white-text intro">ackee</h1>
             </figure>
 
             <div class="controls">
                 <a href="#item-1" class="control-button">•</a>
                 <a href="#item-2" class="control-button">•</a>
                 <a href="#item-3" class="control-button">•</a>
+                <a href="#item-4" class="control-button">•</a>
             </div>
         </div>
     </section>
@@ -153,6 +159,8 @@
 
     </section>
 
+    <div class="hidden" id="particles-js"></div>
+    
     <footer class="global-footer">
         <div class="container">
             <div class="one column footer-padding">
