Work html pages added

--- a/src/work/uwork.html
+++ b/src/work/uwork.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>ackee creative | work</title>
+    <title>ackee creative | freelancer Winchester</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,10 +27,10 @@
                     <a class="text-white" href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="about.html"><u>About</u></a>
                 </li>
                 <li>
-                    <a href="work.html"><u>Work</u></a>
+                    <a href="work.html">Work</a>
                 </li>
                 <li>
                     <a href="blog.html">Blog</a>
@@ -40,79 +40,62 @@
                 <img src="img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
             </div>
         </nav>
-        <div class="gallery hero autoplay items-4">
-            <div id="item-1" class="control-operator"></div>
-            <div id="item-2" class="control-operator"></div>
-            <div id="item-3" class="control-operator"></div>
-            <div id="item-4" class="control-operator"></div>
-
-            <figure class="item image-one">
-                <h1 class="text-center white-text intro">CGM Solicitors</h1>
-            </figure>
-
-            <figure class="item image-two">
+        <div class="hero">
+            <div class="about-hero">
                 <h1 class="text-center white-text intro">uWork</h1>
-            </figure>
-
-            <figure class="item image-three">
-                <h1 class="text-center white-text intro">James Falconer</h1>
-            </figure>
-            
-            <figure class="item image-four">
-                <h1 class="text-center white-text intro">ackee</h1>
-            </figure>
-
-            <div class="controls">
-                <a href="#item-1" class="control-button">•</a>
-                <a href="#item-2" class="control-button">•</a>
-                <a href="#item-3" class="control-button">•</a>
-                <a href="#item-4" class="control-button">•</a>
+                <h3>Design   |   Branding   |   UX</h3>
             </div>
         </div>
     </section>
 
     <section>
-        <div class="container">
-            <div class="six-no-padding columns image-blur">
-                <a href="work/uwork.html">
-                    <span class="caption"> <h3>uWork</h3>
-                    <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
-                </a>
+        <div class="container small-text-block">
+            <div class="six columns left-text-intro">
+                <h3>about</h3>
+                <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
-            <div class="six-no-padding columns image-blur">
-                <a href="#">
-                    <span class="caption"> <h3>uWork</h3>
-                    <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/ackee-hero.png" class="img-responsive" alt="ackee logo on dark background">
-                </a>
-            </div>
-            <div class="six-no-padding columns image-blur">
-                <a href="#">
-                    <span class="caption"> <h3>uWork</h3>
-                    <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/jf-hero.png" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
-                </a>
-            </div>
-            <div class="six-no-padding columns image-blur">
-                <a href="#">
-                    <span class="caption"> <h3>uWork</h3>
-                    <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/cgm-hero.png" class="img-responsive" alt="young couple smiling from cgm site">
-                </a>
-            </div>
-            <svg width="100%" height="10px" xmlns="http://www.w3.org/2000/svg">
-            <filter id="blur1">
-                <feGaussianBlur stdDeviation="3"/>
-            </filter>
-        </svg>
         </div>
     </section>
 
+    <hr>
+
+    <section>
+        <div class="container small-text-block">
+            <div class="six columns offset-by-six right-text-intro">
+                <h3>skills</h3>
+                <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="grey-text-block">
+        <div class="container text-block">
+            <div class="six columns left-text-intro">
+                <h3>work</h3>
+                <p>Working as Technical Director, Ed is immersed in a creative world with notable work ranging from branding for global events to user interface and user experience design for global apps.</p>
+            </div>
+            <div class="six columns right-text-intro">
+                <h3 class="invisible">clients</h3>
+                <p>Clients worked for include: Abbvie, uWork, Merck, Sanofi Genzyme, Novartis, Sanofi, Shire, Allergan, Celgene, Daiitchi Sankyo, Ipsen, MedPharm, Jazz, Pierre Fabre, Terumo, Vertex</p>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="wrapper">
+            <div class="container">
+                <!--                <video class="showreel-video" id="video" poster="img/showreel-poster.jpg">-->
+                <video class="showreel" id="video1" poster="img/showreel-poster.jpg">
+                <source src="img/ackee-showreel.mp4" type="video/mp4"/>
+                <source src="img/ackee-showreel.webm" type="video/webm"/>
+                <source src="img/ackee-showreel.ogg" type="video/ogg"/>
+            </video>
+                <!--                <button class="media-overlay" type="button"></button>-->
+                <a class="video-control js-video-control paused" href="#" data-video="video1"></a>
+            </div>
+        </div>
+    </section>
 
 
     <section class="contact-form">
@@ -158,9 +141,9 @@
         </div>
 
     </section>
-
-    <div class="hidden" id="particles-js"></div>
     
+    <div class="hidden" id="particles-js"></div>
+
     <footer class="global-footer">
         <div class="container">
             <div class="one column footer-padding">
@@ -205,6 +188,7 @@
             $('nav ul').toggleClass('menu-visible');
         });
     </script>
+
 </body>
 
 </html>
