Particles.js updated

--- a/src/uwork.html
+++ b/src/uwork.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-logo">
             <ul>
                 <li>
-                    <a class="text-white" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="about.html"><u>About</u></a>
@@ -37,7 +37,7 @@
                 </li>
             </ul>
             <div class="menu-handle navbar-logo">
-                <img src="img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
+                <img src="../img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
             </div>
         </nav>
         <div class="hero">
@@ -81,22 +81,6 @@
             </div>
         </div>
     </section>
-
-    <section>
-        <div class="wrapper">
-            <div class="container">
-                <!--                <video class="showreel-video" id="video" poster="img/showreel-poster.jpg">-->
-                <video class="showreel" id="video1" poster="img/showreel-poster.jpg">
-                <source src="img/ackee-showreel.mp4" type="video/mp4"/>
-                <source src="img/ackee-showreel.webm" type="video/webm"/>
-                <source src="img/ackee-showreel.ogg" type="video/ogg"/>
-            </video>
-                <!--                <button class="media-overlay" type="button"></button>-->
-                <a class="video-control js-video-control paused" href="#" data-video="video1"></a>
-            </div>
-        </div>
-    </section>
-
 
     <section class="contact-form">
         <div class="twelve columns contact-hero ">
