--- a/src/work.html
+++ b/src/work.html
@@ -74,7 +74,7 @@
     <section>
         <div class="container">
             <div class="six-no-padding columns image-blur">
-                <a href="work/uwork.html">
+                <a href="uwork.html">
                     <span class="caption"> <h3>uWork</h3>
                     <hr class="hr-full-width">
                     <p>Design   |   Branding</p></span>
