--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-logo">
             <ul>
                 <li>
-                    <a class="text-white" href="index.html"><u>Home</u></a>
+                    <a href="index.html"><u>Home</u></a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
