--- a/src/about.html
+++ b/src/about.html
@@ -32,9 +32,6 @@
                 <li>
                     <a href="work.html">Work</a>
                 </li>
-                <li>
-                    <a href="blog.html">Blog</a>
-                </li>
             </ul>
             <div class="menu-handle navbar-logo">
                 <img src="img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
@@ -165,7 +162,6 @@
     <script src="./js/main.js"></script>
     <script src="./js/modernizr-2.8.3.min.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
         (function(b, o, i, l, e, r) {
             b.GoogleAnalyticsObject = l;
@@ -179,7 +175,7 @@
             e.src = 'https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e, r)
         }(window, document, 'script', 'ga'));
-        ga('create', 'UA-XXXXX-X', 'auto');
+        ga('create', 'UA-97851775-1', 'auto');
         ga('send', 'pageview');
     </script>
     <script>
