--- a/src/ackee.html
+++ b/src/ackee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>ackee creative | freelancer Winchester</title>
+    <title>ackee creative | ackee</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -32,59 +32,56 @@
                 <li>
                     <a href="work.html">Work</a>
                 </li>
-                <li>
-                    <a href="blog.html">Blog</a>
-                </li>
             </ul>
             <div class="menu-handle navbar-logo">
                 <img src="../img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
             </div>
         </nav>
-        <div class="hero" style="background-image: url(../img/uwork-candid-man-hero.jpg);">
-            <h1 class="visuallyhidden">Candid teenager sitting on a wall smiling</h1>
-            <h1 class="text-center white-text intro">uWork</h1>
-            <h3 class="text-center white-text sub-intro">Design | Branding | UX</h3>
+        <div class="hero" style="background-image: url(../img/ackee-work-hero.jpg);">
+            <h1 class="visuallyhidden">abstract images of a wall</h1>
+            <h1 class="text-center white-text intro">ackee</h1>
+            <h3 class="text-center white-text sub-intro">Design | Branding</h3>
         </div>
     </section>
 
     <section>
         <div class="central-text-intro container">
             <div class="twelve columns">
-                <h3>ackee is the portfolio of Ed Stennett</h3>
+                <h3>intro</h3>
                 <p>ackee is a site designed to showcase work by Winchester based UX Designer Ed Stennett. With over three years agency experience and a strong passion for pixel perfect design and beatiful user experiences, the site showcases recent work, concepts and ideas.</p>
                 <hr class="divider">
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+    <section class="portfolio-image-block" style="background-image: url(../img/ackee-bg.jpg);">
+        <h1 class="visuallyhidden">ackee brand guidelines</h1>
     </section>
 
     <section>
         <div class="container small-text-block">
             <div class="six columns left-text-intro">
-                <h3>about</h3>
+                <h3>identity</h3>
                 <p>Ed is a passionate and experienced designer, specialising in UX design and branding. ackee is site hand coded by Ed to showcase some of his work.</p>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+    <section class="portfolio-image-block" style="background-image: url(../img/ackee-hero.jpg);">
+        <h1 class="visuallyhidden">ackee hero</h1>
     </section>
 
     <section>
         <div class="container small-text-block">
             <div class="six columns offset-by-six right-text-intro">
-                <h3>skills</h3>
+                <h3>site</h3>
                 <p>Branding and rebranding<br> Web design and development<br> User interface design and user expierience design<br> Grahpic and print design<br> 2D and 3D Animation</p>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+    <section class="portfolio-image-block" style="background-image: url(../img/ackee-ipad.jpg);">
+        <h1 class="visuallyhidden">ackee site being viewed on an iPad</h1>
     </section>
 
 
@@ -97,12 +94,12 @@
         </div>
     </section>
     
-        <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+        <section class="portfolio-image-block" style="background-image: url(../img/ackee-iphone-app.jpg);">
+        <h1 class="visuallyhidden">ackee site being viewed on an iPhone by a man on a train</h1>
     </section>
     
-        <section class="portfolio-image-block" style="background-image: url(../img/uwork-shop-hero.jpg);">
-        <h1 class="visuallyhidden">uWork hero</h1>
+        <section class="portfolio-image-block" style="background-image: url(../img/ackee-logo-construction.jpg);">
+        <h1 class="visuallyhidden">ackee logo construction</h1>
     </section>
 
     <section class="contact-form">
@@ -173,7 +170,6 @@
     <script src="./js/main.js"></script>
     <script src="./js/modernizr-2.8.3.min.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
         (function(b, o, i, l, e, r) {
             b.GoogleAnalyticsObject = l;
@@ -187,7 +183,7 @@
             e.src = 'https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e, r)
         }(window, document, 'script', 'ga'));
-        ga('create', 'UA-XXXXX-X', 'auto');
+        ga('create', 'UA-97851775-1', 'auto');
         ga('send', 'pageview');
     </script>
     <script>
