--- a/src/index.html
+++ b/src/index.html
@@ -59,35 +59,35 @@
 
     <section>
         <div class="six-no-padding columns image-blur">
-            <a href="#">
+            <a href="uwork.html">
                 <span class="caption"> <h3>uWork</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
+                    <p>Design   |   Branding   |   UX   |   UI</p></span>
                 <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
             </a>
         </div>
         <div class="six-no-padding columns image-blur">
-            <a href="#">
-                <span class="caption"> <h3>uWork</h3>
+            <a href="ackee.html">
+                <span class="caption"> <h3>ackee</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                <img src="img/ackee-hero.png" class="img-responsive" alt="ackee logo on dark background">
+                    <p>Web Design   |   Branding</p></span>
+                <img src="img/ackee-hero.jpg" class="img-responsive" alt="ackee logo on dark background">
             </a>
         </div>
         <div class="six-no-padding columns image-blur">
-            <a href="#">
-                <span class="caption"> <h3>uWork</h3>
+            <a href="jamesfalconer.html">
+                <span class="caption"> <h3>James Falconer</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                <img src="img/jf-hero.png" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
+                    <p>Web Design</p></span>
+                <img src="img/jf-hero.jpg" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
             </a>
         </div>
         <div class="six-no-padding columns image-blur">
-            <a href="#">
-                <span class="caption"> <h3>uWork</h3>
+            <a href="cgm.html">
+                <span class="caption"> <h3>CGM</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                <img src="img/cgm-hero.png" class="img-responsive" alt="young couple smiling from cgm site">
+                    <p> Web Design   |   Branding</p></span>
+                <img src="img/cgm-ipad.jpg" class="img-responsive" alt="young couple smiling from cgm site">
             </a>
         </div>
         <svg width="100%" height="10px" xmlns="http://www.w3.org/2000/svg">
