--- a/src/work.html
+++ b/src/work.html
@@ -32,9 +32,6 @@
                 <li>
                     <a href="work.html"><u>Work</u></a>
                 </li>
-                <li>
-                    <a href="blog.html">Blog</a>
-                </li>
             </ul>
             <div class="menu-handle navbar-logo">
                 <img src="img/menu-icon.svg" alt="menu icon (hamburger style)" style="width: 2em;">
@@ -47,11 +44,11 @@
             <div id="item-4" class="control-operator"></div>
 
             <figure class="item image-one">
-                <h1 class="text-center white-text intro">CGM Solicitors</h1>
+                <h1 class="text-center white-text intro">uWork</h1>
             </figure>
 
             <figure class="item image-two">
-                <h1 class="text-center white-text intro">uWork</h1>
+                <h1 class="text-center white-text intro">CGM Solicitors</h1>
             </figure>
 
             <figure class="item image-three">
@@ -74,37 +71,37 @@
     <section>
         <div class="container">
             <div class="six-no-padding columns image-blur">
-                <a href="uwork.html">
-                    <span class="caption"> <h3>uWork</h3>
+            <a href="uwork.html">
+                <span class="caption"> <h3>uWork</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
-                </a>
-            </div>
-            <div class="six-no-padding columns image-blur">
-                <a href="#">
-                    <span class="caption"> <h3>uWork</h3>
+                    <p>Design   |   Branding   |   UX   |   UI</p></span>
+                <img src="img/uwork-hero.png" class="img-responsive" alt="uwork logo on green background">
+            </a>
+        </div>
+        <div class="six-no-padding columns image-blur">
+            <a href="ackee.html">
+                <span class="caption"> <h3>ackee</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/ackee-hero.png" class="img-responsive" alt="ackee logo on dark background">
-                </a>
-            </div>
-            <div class="six-no-padding columns image-blur">
-                <a href="#">
-                    <span class="caption"> <h3>uWork</h3>
+                    <p>Web Design   |   Branding</p></span>
+                <img src="img/ackee-hero.jpg" class="img-responsive" alt="ackee logo on dark background">
+            </a>
+        </div>
+        <div class="six-no-padding columns image-blur">
+            <a href="jamesfalconer.html">
+                <span class="caption"> <h3>James Falconer</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/jf-hero.png" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
-                </a>
-            </div>
-            <div class="six-no-padding columns image-blur">
-                <a href="#">
-                    <span class="caption"> <h3>uWork</h3>
+                    <p>Web Design</p></span>
+                <img src="img/jf-hero.jpg" class="img-responsive" alt="dark image from James Falconer's site with a lightbulb">
+            </a>
+        </div>
+        <div class="six-no-padding columns image-blur">
+            <a href="cgm.html">
+                <span class="caption"> <h3>CGM</h3>
                     <hr class="hr-full-width">
-                    <p>Design   |   Branding</p></span>
-                    <img src="img/cgm-hero.png" class="img-responsive" alt="young couple smiling from cgm site">
-                </a>
-            </div>
+                    <p> Web Design   |   Branding</p></span>
+                <img src="img/cgm-ipad.jpg" class="img-responsive" alt="ipad being used showing cgm site">
+            </a>
+        </div>
             <svg width="100%" height="10px" xmlns="http://www.w3.org/2000/svg">
             <filter id="blur1">
                 <feGaussianBlur stdDeviation="3"/>
@@ -183,7 +180,6 @@
     <script src="./js/main.js"></script>
     <script src="./js/modernizr-2.8.3.min.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
         (function(b, o, i, l, e, r) {
             b.GoogleAnalyticsObject = l;
@@ -197,7 +193,7 @@
             e.src = 'https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e, r)
         }(window, document, 'script', 'ga'));
-        ga('create', 'UA-XXXXX-X', 'auto');
+        ga('create', 'UA-97851775-1', 'auto');
         ga('send', 'pageview');
     </script>
     <script>
