--- a/src/uwork.html
+++ b/src/uwork.html
@@ -173,7 +173,6 @@
     <script src="./js/main.js"></script>
     <script src="./js/modernizr-2.8.3.min.js"></script>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
         (function(b, o, i, l, e, r) {
             b.GoogleAnalyticsObject = l;
@@ -187,7 +186,7 @@
             e.src = 'https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e, r)
         }(window, document, 'script', 'ga'));
-        ga('create', 'UA-XXXXX-X', 'auto');
+        ga('create', 'UA-97851775-1', 'auto');
         ga('send', 'pageview');
     </script>
     <script>
